BIRB USE IT NOW

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
-<head><title>ShadowDoggo9 Website</title><style>
+<head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+<title>ShadowDoggo9 Website</title><style>
+body {
+  margin:0px;
+}
 .headings {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:'Abel', sans-serif;
     text-align: center
 }  .top {
-  background-image: url("4D04AFC2-87F2-453D-B515-EFD06C6672F0.jpeg"), url("4D04AFC2-87F2-453D-B515-EFD06C6672F0.jpeg");
-  background-color: rgb(255, 0, 204);
+  background-image: url("background.jpg"), url("4D04AFC2-87F2-453D-B515-EFD06C6672F0.jpeg");
   height: 600px; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
@@ -83,10 +88,9 @@
     </style>
     </head>
 <body>
-    <h1 class="headings">ShadowDoggo9</h1>
+    <h1 class="headings">shadow.</h1>
     <div class="navbar">
         <a href="https://ShadowDoggo9.github.io">Home</a>
-        <a href="coding-updates.html">Coding Updates</a>
         <div class="dropdown">
           <button class="dropbtn">Social
             <i class="fa fa-caret-down"></i>
@@ -102,10 +106,8 @@
         </div>
       </div>
 <div class="top">
-    <p style="font-size: 40;  text-align: middle;"><br><br><br>Welcome to Shadow Dog's Website!</p>
-    <p style="font-size: 25;  text-align: middle;"><br><br><br>Note there might be some errors/bugs in this, but overall it will be ok!</p>
+  <h1><br><br><br><br>shadow's website</h2>
+  </div>
 </div>
-<h2 class="headings">Who am I?</h2>
-<p class="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Well, I am a coder, and I have been coding for over a year, it started of with basic HTML, then JavaScript, Python, then to this! I am also a new YouTuber, and have a <a href="https://discord.gg/uh3NngRCrW">Discord Server.</a></p>
 </body>
 </html>
